# xllm

./: CMakeLists.txt
tests/core/runtime/: CMakeLists.txt
xllm/: xllm.cpp
xllm/core/common/: CMakeLists.txt  cp_runtime_check.h  global_flags.cpp  global_flags.h  macros.h  options.h  types.h
xllm/core/distributed_runtime/: comm_channel.cpp  comm_channel.h  disagg_pd_service_impl.cpp  dist_manager.cpp  engine.h  llm_engine.cpp  llm_engine.h  llm_master.cpp  master.cpp  remote_worker.cpp  remote_worker.h  worker_server.cpp  worker_server.h  worker_service.cpp  worker_service.h
xllm/core/platform/: CMakeLists.txt
xllm/core/platform/vmm/: CMakeLists.txt
xllm/core/platform/vmm/submitter/: common.h  manager.cpp  manager.h  submitter.cpp  submitter.h  worker.cpp  worker.h
xllm/core/platform/vmm_submitter/: vmm_common.h  vmm_manager.cpp  vmm_manager.h  vmm_submitter.cpp  vmm_submitter.h  vmm_worker.cpp  vmm_worker.h
xllm/core/runtime/: acl_graph_executor_impl.cpp  cuda_graph_executor_impl.cpp  forward_params.h  forward_shared_memory_manager.cpp  llm_worker_impl.cpp  mlu_graph_executor_impl.cpp  mtp_worker_impl.cpp  options.h  params_utils.cpp  spec_input_builder.cpp  vlm_executor_impl.cpp  worker.cpp  worker.h  worker_client.cpp  worker_client.h  worker_impl.cpp  worker_impl.h  xservice_client.cpp
xllm/core/scheduler/: continuous_scheduler.cpp  continuous_scheduler.h  disagg_pd_scheduler.cpp
xllm/core/util/: CMakeLists.txt  npu_scatter_trace.cpp  npu_scatter_trace.h  utils.h
xllm/proto/: disagg_pd.proto  worker.proto  xservice.proto
(+56 files in other folders)
